更新安装脚本，删除不必要的文件

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@ humann/data
 humann/tests
 humann.egg-info
 build
+parallel_humann/data
+parallel_humann/tests
+parallel_humann/tools
+parallel_humann/quantify
